--- a/getintouch/Get_in_toch.html
+++ b/getintouch/Get_in_toch.html
@@ -27,7 +27,7 @@
 
   <nav id="nav-section" class="navbar navbar-expand-lg navbar-dark  sticky-top">
     <div class="container">
-      <a class="navbar-brand " href="../home/index.html"><img src="../Assets/image/logo1.jpg" class="img-fluid logo-img"
+      <a class="navbar-brand " href="../home/index.html"><img src="../assets/image/logo1.jpg" class="img-fluid logo-img"
           alt=""></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
