--- a/index.html
+++ b/index.html
@@ -345,10 +345,10 @@
         slidesToScroll: 1,
       });
       AOS.init({
-        offset: 120, // Trigger animation when 120px from the top
-        duration: 1000, // Animation duration
-        easing: "ease-in-out", // Animation easing
-        once: false, // Whether animation should happen only once - while scrolling down
+        offset: 120,
+        duration: 1000,
+        easing: "ease-in-out", 
+        once: false,
       });
     });
   </script>
