--- a/about/index.html
+++ b/about/index.html
@@ -20,7 +20,7 @@
     integrity="sha512-rd0qOHVMOcez6pLWPVFIv7EfSdGKLt+eafXh4RO/12Fgr41hDQxfGvoi1Vy55QIVcQEujUE1LQrATCLl2Fs+ag=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <!-- css link -->
-  <link rel="stylesheet" href="../home/homeStyle.css">
+  <link rel="stylesheet" href="../css/style.css">
   <link rel="stylesheet" href="../about/aboutStyle.css">
   <title>Unstop Techno Solution</title>
 </head>
@@ -30,7 +30,7 @@
   <div id="nav-section"></div>
   <nav id="nav-section" class="navbar navbar-expand-lg navbar-dark  sticky-top">
     <div class="container">
-      <a class="navbar-brand " href="../home/index.html"><img src="../assets/image/logo1.jpg" class="img-fluid logo-img"
+      <a class="navbar-brand " href="/index.html"><img src="../assets/image/logo1.jpg" class="img-fluid logo-img"
           alt=""></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -39,23 +39,23 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item px-4">
-            <a class="nav-link " href="../home/index.html">Home</a>
+            <a class="nav-link " href="/index.html">Home</a>
           </li>
           <li class="nav-item px-4">
-            <a class="nav-link " href="../service/servicepage.html">Services</a>
+            <a class="nav-link " href="../service/index.html">Services</a>
           </li>
           <li class="nav-item px-4">
-            <a class="nav-link" href="../about/aboutpage.html">About Us</a>
+            <a class="nav-link" href="../about/index.html">About Us</a>
           </li>
           <li class="nav-item px-4">
-            <a class="nav-link" href="../career/careerpage.html">Career</a>
+            <a class="nav-link" href="../career/index.html">Career</a>
           </li>
           <li class="nav-item px-4">
-            <a class="nav-link" href="../blog/blogpage.html">Blog</a>
+            <a class="nav-link" href="../blog/index.html">Blog</a>
           </li>
           <li class="nav-item px-4">
             <Button type="button" class="btn btn-success  ">
-              <a class="nav-link get-btn" href="../getintouch/Get_in_toch.html">Get In Touch</a></Button>
+              <a class="nav-link get-btn" href="../getintouch/index.html">Get In Touch</a></Button>
           </li>
         </ul>
       </div>
@@ -196,27 +196,27 @@
             <!-- Links -->
             <h6 class="text-uppercase fw-bold mb-4">Quick Links</h6>
             <p>
-              <a href="../home/index.html" class="text-reset footer-link"><i
+              <a href="/index.html" class="text-reset footer-link"><i
                   class="fa-solid fa-angle-right"></i>Home</a>
             </p>
             <p>
-              <a href="../service/servicepage.html" class="text-reset footer-link"><i
+              <a href="../service/index.html" class="text-reset footer-link"><i
                   class="fa-solid fa-angle-right"></i>Service</a>
             </p>
             <p>
-              <a href="../about/aboutpage.html" class="text-reset footer-link"><i
+              <a href="../about/index.html" class="text-reset footer-link"><i
                   class="fa-solid fa-angle-right"></i>About Us</a>
             </p>
             <p>
-              <a href="../career/careerpage.html" class="text-reset footer-link"><i
+              <a href="../career/index.html" class="text-reset footer-link"><i
                   class="fa-solid fa-angle-right"></i>Career</a>
             </p>
             <p>
-              <a href="../blog/blogpage.html" class="text-reset footer-link"><i
+              <a href="../blog/index.html" class="text-reset footer-link"><i
                   class="fa-solid fa-angle-right"></i>Blog</a>
             </p>
             <p>
-              <a href="../getintouch/Get_in_toch.html" class="text-reset footer-link"><i
+              <a href="../getintouch/index.html" class="text-reset footer-link"><i
                   class="fa-solid fa-angle-right"></i>Get In Touch</a>
             </p>
           </div>
